prevents clipping of product card image in featured card

--- a/components/product/ProductCard/ProductCard.module.css
+++ b/components/product/ProductCard/ProductCard.module.css
@@ -1,5 +1,6 @@
 .root {
-  @apply relative max-h-full;
+  @apply relative;
+  max-height: 100% !important;
 
   /* 'raises' product against background on hover */
   &:hover {
